crates/cribo/tests/snapshots/test_cli_stdout__stdout_bundling_stderr.snap
---
source: crates/cribo/tests/test_cli_stdout.rs
expression: stderr
---
warning: <WORKSPACE> unused manifest key: workspace.package.default-run
warning: methods `transform_bundled_import_from`, `rewrite_import_in_stmt_multiple`, `transform_bundled_import_multiple`, and `handle_star_import_from_inlined_module` are never used
    --> crates/cribo/src/hybrid_static_bundler.rs:1390:8
     |
40   | impl HybridStaticBundler {
     | ------------------------ methods in this implementation
...
1390 |     fn transform_bundled_import_from(
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
1448 |     fn rewrite_import_in_stmt_multiple(&self, stmt: Stmt) -> Vec<Stmt> {
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
1481 |     fn transform_bundled_import_multiple(&self, import_stmt: StmtImport) -> Vec<Stmt> {
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
1928 |     fn handle_star_import_from_inlined_module(
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = note: `#[warn(dead_code)]` on by default

warning: methods `create_staticmethod_decorator`, `create_module_hierarchy`, and `should_hoist_class` are never used
    --> crates/cribo/src/static_bundler.rs:474:8
     |
49   | impl StaticBundler {
     | ------------------ methods in this implementation
...
474  |     fn create_staticmethod_decorator(&self) -> Decorator {
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
678  |     fn create_module_hierarchy(&self, module_name: &str) -> Vec<Stmt> {
     |        ^^^^^^^^^^^^^^^^^^^^^^^
...
1327 |     fn should_hoist_class(&self, class_def: &StmtClassDef) -> bool {
     |        ^^^^^^^^^^^^^^^^^^

warning: `cribo` (lib) generated 2 warnings
    Finished `<PROFILE>` profile [<FLAGS>] target(s) in <TIME>
     Running `<WORKSPACE> --entry <WORKSPACE> --stdout`
