crates/cribo/tests/snapshots/test_cli_stdout__stdout_conflicts_with_output_stderr.snap
---
source: crates/cribo/tests/test_cli_stdout.rs
expression: stderr
---
warning: fields `current_scope` and `import_usage` are never read
  --> crates/cribo/src/enhanced_graph_builder.rs:28:5
   |
26 | pub struct EnhancedGraphBuilder<'a> {
   |            -------------------- fields in this struct
27 |     graph: &'a mut ModuleDepGraph,
28 |     current_scope: ScopeType,
   |     ^^^^^^^^^^^^^
...
32 |     import_usage: FxHashSet<ImportUsageContext>,
   |     ^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: field `0` is never read
  --> crates/cribo/src/enhanced_graph_builder.rs:38:14
   |
38 |     Function(String), // Function name
   |     -------- ^^^^^^
   |     |
   |     field in this variant
   |
   = note: `ScopeType` has derived impls for the traits `Clone` and `Debug`, but these are intentionally ignored during dead code analysis
help: consider changing the field to be of unit type to suppress this warning while preserving the field numbering, or remove the field
   |
38 -     Function(String), // Function name
38 +     Function(()), // Function name
   |

warning: field `0` is never read
  --> crates/cribo/src/enhanced_graph_builder.rs:39:11
   |
39 |     Class(String),    // Class name
   |     ----- ^^^^^^
   |     |
   |     field in this variant
   |
   = note: `ScopeType` has derived impls for the traits `Clone` and `Debug`, but these are intentionally ignored during dead code analysis
help: consider changing the field to be of unit type to suppress this warning while preserving the field numbering, or remove the field
   |
39 -     Class(String),    // Class name
39 +     Class(()),    // Class name
   |

warning: fields `imports_to_move` and `side_effect_imports` are never read
  --> crates/cribo/src/import_rewriter.rs:54:5
   |
52 | pub struct ImportRewriter {
   |            -------------- fields in this struct
53 |     /// Imports to move and their target functions
54 |     imports_to_move: FxHashMap<ImportId, Vec<String>>,
   |     ^^^^^^^^^^^^^^^
...
58 |     side_effect_imports: FxHashSet<String>,
   |     ^^^^^^^^^^^^^^^^^^^

error: the argument '--output <OUTPUT>' cannot be used with '--stdout'

Usage: cribo --entry <ENTRY> --output <OUTPUT>

For more information, try '--help'.
