crates/cribo/tests/snapshots/test_cli_stdout__stdout_requirements_stderr.snap
---
source: crates/cribo/tests/test_cli_stdout.rs
expression: stderr
---
warning: <WORKSPACE> unused manifest key: workspace.package.default-run
    Finished `<PROFILE>` profile [<FLAGS>] target(s) in <TIME>
     Running `<WORKSPACE> --entry <WORKSPACE> --stdout --emit-requirements`
