crates/cribo/tests/snapshots/test_cli_stdout__stdout_verbose_output.snap
---
source: crates/cribo/tests/test_cli_stdout.rs
expression: stdout
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import os
import sys
from typing import Union
from dataclasses import dataclass
from typing import Optional
"""Utility functions for the test project."""
def greet(name: str) -> str:
    """Greet a person by name."""
    return f"Hello, {name}!"
def calculate(a: Union[int, float], b: Union[int, float]) -> Union[int, float]:
    """Calculate the sum of two numbers."""
    return a + b
def get_system_info() -> dict:
    """Get basic system information."""
    return {"platform": sys.platform, "python_version": sys.version, "cwd": os.getcwd()}
"""Utils package initialization."""
"""User model for the test project."""
@dataclass
class User:
    """A simple user model."""
    name: str
    age: int
    email: Optional[str] = None

    def is_adult(self) -> bool:
        """Check if the user is an adult."""
        return self.age >= 18

    def get_display_name(self) -> str:
        """Get a display name for the user."""
        if self.email:
            return f"{self.name} <{self.email}>"
        return self.name
"""Models package initialization."""
"""Simple test project entry point."""
def main():
    """Main function."""
    user = User("Alice", 30)
    print(greet(user.name))
    result = calculate(10, 20)
    print(f"Calculation result: {result}")
    print(f"User: {user.name}, Age: {user.age}")
if __name__ == "__main__":
    main()
