crates/cribo/tests/snapshots/test_cli_stdout__stdout_verbose_stderr.snap
---
source: crates/cribo/tests/test_cli_stdout.rs
expression: stderr
---
warning: <WORKSPACE> unused manifest key: workspace.package.default-run
warning: methods `transform_bundled_import_from`, `rewrite_import_in_stmt_multiple`, `transform_bundled_import_multiple`, and `handle_star_import_from_inlined_module` are never used
    --> crates/cribo/src/hybrid_static_bundler.rs:1439:8
     |
39   | impl HybridStaticBundler {
     | ------------------------ methods in this implementation
...
1439 |     fn transform_bundled_import_from(
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
1500 |     fn rewrite_import_in_stmt_multiple(&self, stmt: Stmt) -> Vec<Stmt> {
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
1533 |     fn transform_bundled_import_multiple(&self, import_stmt: StmtImport) -> Vec<Stmt> {
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
2030 |     fn handle_star_import_from_inlined_module(
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = note: `#[warn(dead_code)]` on by default

warning: `cribo` (lib) generated 1 warning
    Finished `<PROFILE>` profile [<FLAGS>] target(s) in <TIME>
     Running `<WORKSPACE> --entry <WORKSPACE> --stdout -v`
[<TIMESTAMP>Z INFO  cribo] Starting Cribo Python bundler
[<TIMESTAMP>Z INFO  cribo] Target Python version: py310 (resolved to Python 3.10)
[<TIMESTAMP>Z INFO  cribo::bundler] Starting bundle process for stdout output
[<TIMESTAMP>Z INFO  cribo::bundler] Entry module: main
[<TIMESTAMP>Z INFO  cribo::bundler] Phase 1: Discovering all modules...
[<TIMESTAMP>Z INFO  cribo::bundler] Phase 1 complete: discovered 5 modules
[<TIMESTAMP>Z INFO  cribo::bundler] Phase 2: Adding modules to graph...
[<TIMESTAMP>Z INFO  cribo::bundler] Added 5 modules to graph
[<TIMESTAMP>Z INFO  cribo::bundler] Phase 2: Creating dependency edges...
[<TIMESTAMP>Z INFO  cribo::bundler] Phase 2 complete: dependency graph built with 5 modules
[<TIMESTAMP>Z INFO  cribo::bundler] Found 5 modules to bundle
[<TIMESTAMP>Z INFO  cribo::bundler] Using hybrid static bundler
[<TIMESTAMP>Z INFO  cribo] Bundle output to stdout
